--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,10 +4,9 @@
 name: Go
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  create:
+    tags:
+    - v*
 
 jobs:
   build:
@@ -21,4 +20,4 @@ jobs:
         go-version: 1.19
 
     - name: Build
-      run: go build -v ./...
+      run: make release
