--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,20 +4,28 @@
 name: Go
 
 on:
-  create:
+  push:
     tags:
     - v*
 
 jobs:
-  build:
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: 1.19
 
-    - name: Build
-      run: make release
+    - name: Run GoReleaser
+      uses: goreleaser/goreleaser-action@v4
+      with:
+        distribution: goreleaser
+        version: latest
+        args: release --clean
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
